[package]
name = "async-stream-impl"
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Carl Lerche <me@carllerche.com>"]
description = "proc macros for async-stream crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
