[package]
name = "async-stream"
# When releasing to crates.io:
# - Update CHANGELOG.md
# - Create git tag
version = "0.3.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Asynchronous streams using async & await notation"

[dependencies]
async-stream-impl = { workspace = true }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
rustversion = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
trybuild = { workspace = true }
